--- a/frontend/Svelte/jsconfig.json
+++ b/frontend/Svelte/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "Node",
     "target": "ESNext",
-    "module": "ESNext",
+    "module": "CommonJS",
     /**
      * svelte-preprocess cannot figure out whether you have
      * a value or a type, so tell TypeScript to enforce using
